<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('class_user', function (Blueprint $table) {
            $table->id();

            $table->foreignId('class_id')->constrained('classes')->onDelete('cascade');
            $table->foreignId('user_id')->constrained('users')->onDelete('cascade');

            $table->timestamp('joined_at')->useCurrent();
            $table->unique(['class_id', 'user_id'], 'class_user_unique');

            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('class_user');
    }
};
